# loli_profiler

./: .gitignore  .mcp.json  BUILD_LINUX.md  CLAUDE.md  CMakeLists.txt  CODEBUDDY.md  Dockerfile  LICENSE  README.md  README_EN.md  WinBuild.bat  adbprocess.cpp  adbprocess.h  addressprocess.cpp  addressprocess.h  analyze_heap.py  analyze_memory_diff.py  build.bat  build.sh  build_linux.sh  build_linux_with_docker.sh  configdialog.ui  fixedscrollarea.cpp  fixedscrollarea.h  interactivechartview.cpp  loliprofiler.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  markdown_to_html.py  meminfoprocess.cpp  meminfoprocess.h  preprocess_memory_diff.py  screenshotprocess.cpp  stacktraceprocess.cpp  stacktraceprocess.h  stacktreewidget.cpp  stacktreewidget.h  startappprocess.cpp  startappprocess.h  (+1 more)
WinBuild/: BuildProject.bat  EnterPoint.bat
cmake/: macosx_bundle_info.plist.in.xml
docs/: BUILD.md  CLI_COMPARE_MODE.md  CLI_MODE.md  GAME_ENGINE.md  GAME_ENGINE_CN.md  MCP_HEAP_EXPLORER.md  PRINCIPLE.md  PRINCIPLE_CN.md  QUICK_START.md  QUICK_START_CN.md  TROUBLE_SHOOTING.md
include/: adbprocess.h  charttooltipitem.h  clilogger.h  cliprofiler.h  configdialog.h  configlistwidget.h  customgraphicsview.h  deviceselectiondialog.h  fixedscrollarea.h  hashstring.h  interactivechartview.h  mainwindow.h  memgraphicsview.h  meminfoprocess.h  pathutils.h  profilecomparator.h  screenshotprocess.h  selectappdialog.h  stacktracemodel.h  stacktraceprocess.h  stacktraceproxymodel.h  startappprocess.h  timeprofiler.h  treemapgraphicsview.h
include/smaps/: smapssection.h  statsmapsdialog.h  visualizesmapsdialog.h
mcp_server/: heap_explorer_server.py  tree_model.py
plugins/: README.md
plugins/Android/jni/: Android.mk  Application.mk  buffer.h  loli.cpp  loli.h  loli_dlfcn.h  loli_server.cpp  loli_server.h  loli_utils.cpp  loli_utils.h  queue.h  sampler.h  spinlock.h  xh_core.c  xh_elf.c  xh_log.h
plugins/Android/jni/wrapper/: wrapper.cpp  wrapper.h
plugins/JdwpUtil/jni/: Android.mk  Application.mk  jdwputil.cpp  loli_dlfcn.c
plugins/Unity/: README.md
plugins/Unity/Android/jni/: Android.mk  loli.cpp  loli.h
plugins/Unity/LoliProfiler/: LoliProfiler.cs
python/: jdwp-shellifier.py  logging.json
res/: devices.icns  icon.qrc
scripts/: BuildAndroidLibs.bat  BuildAndroidLibs.sh  BuildProject.bat  BuildProject.sh  CopyConfig.bat  CopyConfig.sh  CopyConfig_linux.sh  Deployqt.bat  Deployqt.sh  Deployqt_linux.sh  EnterPoint.bat  EnterPoint.sh  EnterPoint_linux.sh
scripts/target_mac/: BuildAndroidLibs.sh  BuildProject.sh  CopyConfig.sh  EnterPoint.sh
src/: adbprocess.cpp  addressprocess.cpp  charttooltipitem.cpp  clilogger.cpp  cliprofiler.cpp  configdialog.cpp  configdialog.ui  configlistwidget.cpp  customgraphicsview.cpp  deviceselectiondialog.cpp  deviceselectiondialog.ui  fixedscrollarea.cpp  hashstring.cpp  interactivechartview.cpp  main.cpp  main_cli.cpp  mainwindow.cpp  mainwindow.ui  memgraphicsview.cpp  meminfoprocess.cpp  pathutils.cpp  profilecomparator.cpp  screenshotprocess.cpp  selectappdialog.cpp  stacktracemodel.cpp  stacktraceprocess.cpp  stacktraceproxymodel.cpp  startappprocess.cpp  treemapgraphicsview.cpp
src/smaps/: smapssection.cpp  statsmapsdialog.cpp  visualizesmapsdialog.cpp
template/LoliUnreal/: LoliUnreal.uplugin  README.md
template/LoliUnreal/Source/LoliUnreal/: LoliUnreal.Build.cs  LoliUnreal_APL.xml
template/LoliUnreal/Source/LoliUnreal/Private/: LoliUnreal.cpp
template/LoliUnreal/Source/LoliUnreal/Public/: LoliUnreal.h
